<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_invitation_name"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/recommend_record_name"
            android:textColor="@color/txt_black2"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_invitation_phone"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/recommend_record_phone"
            android:textColor="@color/txt_black2"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/recommend_record_status"
            android:textColor="@color/txt_black2"
            android:textSize="16sp"/>
    </LinearLayout>
</LinearLayout>