<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/white">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_alignParentBottom="true"
        android:scaleType="fitXY"
        android:src="@mipmap/login_bg"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dip"
            android:background="@color/gray_light"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="35dip"
            android:layout_marginLeft="20dip">

            <TextView
                android:id="@+id/tv_sign_phone"
                android:layout_width="72dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/sign_phone_name"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/et_sign_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dip"
                android:layout_toRightOf="@id/tv_sign_phone"
                android:background="@color/transparent"
                android:hint="@string/sign_phone_hint"
                android:inputType="phone"
                android:maxLength="11"
                android:textColor="@color/gray_dark"
                android:textColorHint="@color/gray_d"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="16sp"/>
        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="5dip"
            android:src="@color/gray_light"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="35dip"
            android:layout_marginLeft="20dip"
            android:layout_marginTop="5dip">

            <TextView
                android:id="@+id/tv_sign_verify_code"
                android:layout_width="72dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/sign_verify"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/et_sign_verify_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dip"
                android:layout_toLeftOf="@+id/iv_verify_code"
                android:layout_toRightOf="@id/tv_sign_verify_code"
                android:background="@color/white"
                android:hint="@string/sign_verify_hint"
                android:inputType="number"
                android:maxLength="20"
                android:textColor="@color/gray_dark"
                android:textColorHint="@color/gray_d"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="16sp"/>

            <ImageView
                android:id="@+id/iv_verify_code"
                android:layout_width="2dp"
                android:layout_height="20dip"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/tv_sign_get_verify_code"
                android:src="@color/gray_light"/>

            <TextView
                android:id="@+id/tv_sign_get_verify_code"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/sign_get_verify"
                android:textColor="@color/main_color_yellow"/>
        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="5dip"
            android:src="@color/gray_light"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="35dip"
            android:layout_marginLeft="20dip"
            android:layout_marginTop="5dip">

            <TextView
                android:id="@+id/tv_sign_password"
                android:layout_width="72dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/sign_password_name"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/et_sign_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dip"
                android:layout_toLeftOf="@+id/iv_hide_password"
                android:layout_toRightOf="@id/tv_sign_password"
                android:background="@color/white"
                android:hint="@string/sign_password_hint"
                android:inputType="text"
                android:maxLength="20"
                android:textColor="@color/gray_dark"
                android:textColorHint="@color/gray_d"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="16sp"/>

            <ImageView
                android:id="@+id/iv_hide_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:padding="10dp"
                android:src="@mipmap/icon_open_password"/>
        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="5dip"
            android:src="@color/gray_light"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="35dip"
            android:layout_marginLeft="20dip">

            <TextView
                android:id="@+id/tv_sign_real_name"
                android:layout_width="72dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/sign_real_name"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/et_sign_real_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dip"
                android:layout_toRightOf="@id/tv_sign_real_name"
                android:background="@color/transparent"
                android:hint="@string/sign_real_name_hint"
                android:inputType="text"
                android:maxLength="10"
                android:textColor="@color/gray_dark"
                android:textColorHint="@color/gray_d"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="16sp"/>
        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="5dip"
            android:src="@color/gray_light"/>
        <RelativeLayout
            android:id="@+id/rl_select_address"
            android:layout_width="match_parent"
            android:layout_height="35dip"
            android:layout_marginLeft="20dip">

            <TextView
                android:id="@+id/tv_sign_address_left"
                android:layout_width="72dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/sign_address"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tv_sign_address"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="right|center_vertical"
                android:text="请选择"
                android:textSize="16sp"
                android:textColor="@color/gray_d"
                android:layout_toRightOf="@+id/tv_sign_address_left"
                android:layout_toLeftOf="@+id/img_right"/>
            <ImageView
                android:id="@+id/img_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/img_right"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="5dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="5dip"
            android:src="@color/gray_light"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="35dip"
            android:layout_marginLeft="20dip">

            <TextView
                android:id="@+id/tv_sign_recommendation"
                android:layout_width="72dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/sign_recommend_code"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/et_sign_recommendation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dip"
                android:layout_toRightOf="@id/tv_sign_recommendation"
                android:background="@color/transparent"
                android:hint="@string/sign_recommend_code_hint"
                android:inputType="text"
                android:maxLength="11"
                android:textColor="@color/gray_dark"
                android:textColorHint="@color/gray_d"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="16sp"/>
        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="5dip"
            android:src="@color/gray_light"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginTop="10dip"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/signup_checkbox"
                android:layout_width="18dip"
                android:layout_height="18dip"
                android:layout_gravity="center_vertical"
                android:background="@drawable/checkbox_signup"
                android:button="@null"
                android:checked="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10.0dip"
                android:text="@string/sign_agree"
                android:textColor="@color/gray_d"
                android:textSize="14.0sp"/>

            <TextView
                android:id="@+id/signup_web"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/sign_web"
                android:textColor="@color/main_color_yellow"
                android:textSize="14.0sp"/>

            <TextView
                android:id="@+id/signup_"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/sign_agree_two"
                android:textColor="@color/gray_d"
                android:textSize="14.0sp"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_sign"
            android:layout_width="match_parent"
            android:layout_height="42dip"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:layout_marginTop="20dip"
            android:background="@drawable/shape_gradient_orange"
            android:text="@string/sign_btn_name"
            android:textColor="@color/txt_white"
            android:textSize="15sp"/>
    </LinearLayout>

</RelativeLayout>
