<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/bg_gray_new"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="185dp"
        android:layout_marginTop="10dp"
        android:background="@color/white">

        <EditText
            android:id="@+id/et_consulting_questions"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:background="@color/white"
            android:gravity="top"
            android:hint="@string/et_consulting_questions"
            android:inputType="textMultiLine"
            android:maxLength="200"
            android:padding="12dp"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_change_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:paddingBottom="12dp"
            android:paddingRight="12dp"
            android:text="200/200"
            android:textColor="@color/txt_mark_gray"
            android:textSize="14sp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/tv_phone"
            android:textColor="@color/txt_black1"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tv_phone"
            android:background="@color/white"
            android:hint="@string/et_phone"
            android:inputType="number"
            android:maxLength="11"
            android:paddingBottom="12dp"
            android:paddingLeft="14dp"
            android:paddingRight="12dp"
            android:paddingTop="12dp"
            android:textColor="@color/txt_black1"
            android:textSize="16sp"/>
    </RelativeLayout>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/shape_non_clickable"
        android:gravity="center|center_vertical"
        android:text="@string/btn_submit"
        android:textColor="@color/white"
        android:textSize="16sp"/>
</LinearLayout>